--- a/myenterprise/myenterprise-web/src/main/webapp/index.xhtml
+++ b/myenterprise/myenterprise-web/src/main/webapp/index.xhtml
@@ -1,6 +1,7 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:f="http://java.sun.com/jsf/core" 
       xmlns:h="http://java.sun.com/jsf/html">
     <h:head>
         <title>Facelet Title</title>
@@ -11,6 +12,13 @@
         Reading value from session scoped in web 1: #{sessionScopedWeb1.sesionValue}
         <br/>
         <a href="test.xhtml">Test CODI with JSF</a>
+        <br/>
+        <h:form>
+            <h:messages id="messages"/>
+            <h:commandButton value="Login" actionListener="#{web1IndexMBean.login}">
+                <f:ajax render="messages" />
+            </h:commandButton>
+        </h:form>
     </h:body>
 </html>
 
