--- a/myenterprise/myenterprise-web/src/main/webapp/index.xhtml
+++ b/myenterprise/myenterprise-web/src/main/webapp/index.xhtml
@@ -15,9 +15,18 @@
         <br/>
         <h:form>
             <h:messages id="messages"/>
-            <h:commandButton value="Login" actionListener="#{web1IndexMBean.login}">
+
+            <h:selectOneMenu value="#{web1IndexMBean}" converter="userConverter">
+                <f:selectItem itemLabel="John" itemValue="1,John,johnpass1"/>
+                <f:selectItem itemLabel="Peter" itemValue="2,Peter,peterpass2"/>
+                <f:selectItem itemLabel="Jacob" itemValue="3,Jacob,jacobpass3"/>
+            </h:selectOneMenu>
+
+
+            <h:commandButton value="Check User" actionListener="#{web1IndexMBean.printSelectedUser}">
                 <f:ajax render="messages" />
             </h:commandButton>
+
         </h:form>
     </h:body>
 </html>
